--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
     </servlet-mapping>
     <filter>
         <filter-name>loginfilter</filter-name>
-        <filter-class>com.epam.web.filter.CheckAccessFilter</filter-class>
+        <filter-class>com.epam.web.filter.AnonymousAccessFilter</filter-class>
         <init-param>
             <param-name>loginCommand</param-name>
             <param-value>/index.jsp</param-value>
@@ -30,7 +30,7 @@
     </filter-mapping>
     <filter>
         <filter-name>checkRoleFilter</filter-name>
-        <filter-class>com.epam.web.filter.CheckRoleFilter</filter-class>
+        <filter-class>com.epam.web.filter.AdminAccessFilter</filter-class>
         <init-param>
             <param-name>errorPage</param-name>
             <param-value>/error.jsp</param-value>
