--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,4 +41,10 @@
         <url-pattern>/WEB-INF/view/userManage.jsp</url-pattern>
         <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
+    <jsp-config>
+        <taglib>
+            <taglib-uri>customTags</taglib-uri>
+            <taglib-location>/WEB-INF/tld/testTag.tld</taglib-location>
+        </taglib>
+    </jsp-config>
 </web-app>
