--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,11 +16,15 @@
         <filter-class>com.epam.web.filter.AnonymousAccessFilter</filter-class>
         <init-param>
             <param-name>loginCommand</param-name>
-            <param-value>?commandName=loginPage</param-value>
+            <param-value>loginPage</param-value>
         </init-param>
         <init-param>
             <param-name>errorPage</param-name>
             <param-value>/error.jsp</param-value>
+        </init-param>
+        <init-param>
+            <param-name>loginPage</param-name>
+            <param-value>/index.jsp</param-value>
         </init-param>
     </filter>
     <filter-mapping>
@@ -39,6 +43,19 @@
     <filter-mapping>
         <filter-name>checkRoleFilter</filter-name>
         <url-pattern>/WEB-INF/view/userManage.jsp</url-pattern>
+        <dispatcher>FORWARD</dispatcher>
+    </filter-mapping>
+    <filter>
+        <filter-name>updateUserFilter</filter-name>
+        <filter-class>com.epam.web.filter.UpdateUserFilter</filter-class>
+        <init-param>
+            <param-name>getUserCommand</param-name>
+            <param-value>getUser</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>updateUserFilter</filter-name>
+        <url-pattern>/WEB-INF/view/personal.jsp</url-pattern>
         <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
     <jsp-config>
