--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,12 +19,12 @@
             <param-value>loginPage</param-value>
         </init-param>
         <init-param>
-            <param-name>errorPage</param-name>
-            <param-value>/error.jsp</param-value>
-        </init-param>
-        <init-param>
             <param-name>loginPage</param-name>
             <param-value>/index.jsp</param-value>
+        </init-param>
+        <init-param>
+            <param-name>errorPage</param-name>
+            <param-value>/error.jsp</param-value>
         </init-param>
     </filter>
     <filter-mapping>
@@ -33,7 +33,7 @@
         <dispatcher>REQUEST</dispatcher>
     </filter-mapping>
     <filter>
-        <filter-name>checkRoleFilter</filter-name>
+        <filter-name>adminAccessFilter</filter-name>
         <filter-class>com.epam.web.filter.AdminAccessFilter</filter-class>
         <init-param>
             <param-name>errorPage</param-name>
@@ -41,9 +41,22 @@
         </init-param>
     </filter>
     <filter-mapping>
-        <filter-name>checkRoleFilter</filter-name>
+        <filter-name>adminAccessFilter</filter-name>
         <url-pattern>/WEB-INF/view/userManage.jsp</url-pattern>
         <dispatcher>FORWARD</dispatcher>
+    </filter-mapping>
+    <filter>
+        <filter-name>userAccessFilter</filter-name>
+        <filter-class>com.epam.web.filter.UserAccessFilter</filter-class>
+        <init-param>
+            <param-name>errorPage</param-name>
+            <param-value>/error.jsp</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>userAccessFilter</filter-name>
+        <url-pattern>/controller</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
     </filter-mapping>
     <filter>
         <filter-name>updateUserFilter</filter-name>
