--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,10 +19,6 @@
             <param-value>loginPage</param-value>
         </init-param>
         <init-param>
-            <param-name>loginPage</param-name>
-            <param-value>/index.jsp</param-value>
-        </init-param>
-        <init-param>
             <param-name>errorPage</param-name>
             <param-value>/error.jsp</param-value>
         </init-param>
@@ -35,23 +31,15 @@
     <filter>
         <filter-name>adminAccessFilter</filter-name>
         <filter-class>com.epam.web.filter.AdminAccessFilter</filter-class>
-        <init-param>
-            <param-name>errorPage</param-name>
-            <param-value>/error.jsp</param-value>
-        </init-param>
     </filter>
     <filter-mapping>
         <filter-name>adminAccessFilter</filter-name>
-        <url-pattern>/WEB-INF/view/userManage.jsp</url-pattern>
-        <dispatcher>FORWARD</dispatcher>
+        <url-pattern>/controller</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
     </filter-mapping>
     <filter>
         <filter-name>userAccessFilter</filter-name>
         <filter-class>com.epam.web.filter.UserAccessFilter</filter-class>
-        <init-param>
-            <param-name>errorPage</param-name>
-            <param-value>/error.jsp</param-value>
-        </init-param>
     </filter>
     <filter-mapping>
         <filter-name>userAccessFilter</filter-name>
@@ -71,6 +59,14 @@
         <url-pattern>/WEB-INF/view/personal.jsp</url-pattern>
         <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/error.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/notFound.jsp</location>
+    </error-page>
     <jsp-config>
         <taglib>
             <taglib-uri>customTags</taglib-uri>
