--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -60,7 +60,7 @@
         <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
     <error-page>
-        <exception-type>java.lang.Throwable</exception-type>
+        <exception-type>java.lang.Exception</exception-type>
         <location>/error.jsp</location>
     </error-page>
     <error-page>
