--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -59,6 +59,15 @@
         <url-pattern>/WEB-INF/view/personal.jsp</url-pattern>
         <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
+    <filter>
+        <filter-name>changeLocalFilter</filter-name>
+        <filter-class>com.epam.web.filter.SessionLocalizeFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>changeLocalFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+
+    </filter-mapping>
     <error-page>
         <exception-type>java.lang.Exception</exception-type>
         <location>/error.jsp</location>
