--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -66,7 +66,7 @@
     <filter-mapping>
         <filter-name>changeLocalFilter</filter-name>
         <url-pattern>/*</url-pattern>
-
+        <dispatcher>REQUEST</dispatcher>
     </filter-mapping>
     <error-page>
         <exception-type>java.lang.Exception</exception-type>
